--- a/trunk/semestre2/langage_web2/BDTheque/.classpath
+++ b/trunk/semestre2/langage_web2/BDTheque/.classpath
@@ -3,22 +3,24 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/fop-1.1Jars/avalon-framework-4.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/fop-1.1Jars/batik-all-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/fop-1.1Jars/commons-io-1.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/fop-1.1Jars/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/fop-1.1Jars/fop.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/fop-1.1Jars/xmlgraphics-commons-1.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/existJars/exist.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/existJars/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/existJars/serializer-2.9.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/existJars/ws-commons-util-1.0.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/existJars/xml-apis-1.3.04.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/existJars/xmldb.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/existJars/xmlrpc-client-3.1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/existJars/xmlrpc-common-3.1.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/avalon-framework-4.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/batik-all-1.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/commons-io-1.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/exist.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/fop.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/joda-time-2.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/serializer-2.9.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/ws-commons-util-1.0.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/xml-apis-1.3.04.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/xmldb.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/xmlgraphics-commons-1.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/xmlrpc-client-3.1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Folabi/workspace/BDTheque/WebContent/WEB-INF/lib/xmlrpc-common-3.1.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
