--- a/semestre2/langage_web2/BDTheque/WebContent/WEB-INF/web.xml
+++ b/semestre2/langage_web2/BDTheque/WebContent/WEB-INF/web.xml
@@ -54,4 +54,14 @@
     <servlet-name>ModifyBd</servlet-name>
     <url-pattern>/ModifyBd</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Upload</display-name>
+    <servlet-name>Upload</servlet-name>
+    <servlet-class>controller.Upload</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Upload</servlet-name>
+    <url-pattern>/Upload</url-pattern>
+  </servlet-mapping>
 </web-app>
