--- a/trunk/semestre2/langage_web2/BDTheque/WebContent/WEB-INF/web.xml
+++ b/trunk/semestre2/langage_web2/BDTheque/WebContent/WEB-INF/web.xml
@@ -1,67 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>BDTheque</display-name>
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <description></description>
-    <display-name>AddNewBd</display-name>
-    <servlet-name>AddNewBd</servlet-name>
-    <servlet-class>controller.AddNewBd</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AddNewBd</servlet-name>
-    <url-pattern>/AddNewBd</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>Index</display-name>
-    <servlet-name>Index</servlet-name>
-    <servlet-class>controller.Index</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Index</servlet-name>
-    <url-pattern>/Index</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>Search</display-name>
-    <servlet-name>Search</servlet-name>
-    <servlet-class>controller.Search</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Search</servlet-name>
-    <url-pattern>/Search</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>BD</display-name>
-    <servlet-name>BD</servlet-name>
-    <servlet-class>controller.BD</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>BD</servlet-name>
-    <url-pattern>/BD</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ModifyBd</display-name>
-    <servlet-name>ModifyBd</servlet-name>
-    <servlet-class>controller.ModifyBd</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ModifyBd</servlet-name>
-    <url-pattern>/ModifyBd</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>Upload</display-name>
-    <servlet-name>Upload</servlet-name>
-    <servlet-class>controller.Upload</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Upload</servlet-name>
-    <url-pattern>/Upload</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	id="WebApp_ID" version="2.5">
+	<display-name>BDTheque</display-name>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<description></description>
+		<display-name>AddNewBd</display-name>
+		<servlet-name>AddNewBd</servlet-name>
+		<servlet-class>controller.AddNewBd</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AddNewBd</servlet-name>
+		<url-pattern>/AddNewBd</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>Index</display-name>
+		<servlet-name>Index</servlet-name>
+		<servlet-class>controller.Index</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Index</servlet-name>
+		<url-pattern>/Index</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>Search</display-name>
+		<servlet-name>Search</servlet-name>
+		<servlet-class>controller.Search</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Search</servlet-name>
+		<url-pattern>/Search</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>BD</display-name>
+		<servlet-name>BD</servlet-name>
+		<servlet-class>controller.BD</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BD</servlet-name>
+		<url-pattern>/BD</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>ModifyBd</display-name>
+		<servlet-name>ModifyBd</servlet-name>
+		<servlet-class>controller.ModifyBd</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ModifyBd</servlet-name>
+		<url-pattern>/ModifyBd</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>SearchLive</display-name>
+		<servlet-name>SearchLive</servlet-name>
+		<servlet-class>controller.SearchLive</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SearchLive</servlet-name>
+		<url-pattern>/SearchLive</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>Upload</display-name>
+		<servlet-name>Upload</servlet-name>
+		<servlet-class>controller.Upload</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Upload</servlet-name>
+		<url-pattern>/Upload</url-pattern>
+	</servlet-mapping>
 </web-app>
